--- a/sql-db mapping.json
+++ b/sql-db mapping.json
@@ -1,7 +1,7 @@
 [
-  { "file": "departments.csv",   "table": "dbo.departments" },
-  { "file": "encounters.csv",    "table": "dbo.encounters" },
-  { "file": "patients.csv",      "table": "dbo.patients" },
-  { "file": "providers.csv",     "table": "dbo.providers" },
-  { "file": "transactions.csv",  "table": "dbo.transactions" }
+  { "file": "departments.csv",   "table": "departments" },
+  { "file": "encounters.csv",    "table": "encounters" },
+  { "file": "patients.csv",      "table": "patients" },
+  { "file": "providers.csv",     "table": "providers" },
+  { "file": "transactions.csv",  "table": "transactions" }
 ]
